src/objects/AIA_Workplan_Type__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Used_For__c</fullName>
        <label>Used For</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workplan_Name__c</fullName>
        <label>Workplan Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workplan_Type__c</fullName>
        <label>Workplan Condition</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Workplan Type</label>
    <listViews>
        <fullName>AIA_Workplan_AIA_Workplan_Type</fullName>
        <filterScope>Queue</filterScope>
        <label>AIA Workplan</label>
        <queue>AIA_Workplan</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Workplan_Name__c</columns>
        <columns>Workplan_Type__c</columns>
        <columns>Used_For__c</columns>
        <columns>Active__c</columns>
        <columns>Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Benefit_Admin_Team_AIA_Workplan_Type</fullName>
        <filterScope>Queue</filterScope>
        <label>Benefits Core Team</label>
        <queue>Benefits_Core_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Benefits_Core_Team_AIA_Workplan_Type</fullName>
        <filterScope>Queue</filterScope>
        <label>Benefits Core Team</label>
        <queue>Benefits_Core_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LGIT_Queue_AIA_Workplan_Type</fullName>
        <filterScope>Queue</filterScope>
        <label>LGIT Queue</label>
        <queue>LGIT_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>WPT-{000000}</displayFormat>
        <label>Workplan Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workplan Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>